auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_struct_full_expr.c
struct s;

extern struct s x;

int main(void) {
  
  for (x;;)
    ;
  return 0;
}